--- a/debian/changelog
+++ b/debian/changelog
@@ -1,23 +1,29 @@
+rocket-menu (20160907) xenial; urgency=low
+
+  * Bugfix: User can't save changes without address column modification (thanks, Adam Wójs!)
+
+ -- Philip Newborough <corenominal@corenominal.org>  Wed, 07 Sep 2016 20:34:31 +0100
+
 rocket-menu (20160906) xenial; urgency=low
 
   * Add ability to run shell command from menu (thanks, Adam Wójs!)
   * Add python-webob dependency.
 
- -- Philip Newborough <corenominal@corenominal.org>  Tue, 6 Sep 2016 18:04:37 +0100
+ -- Philip Newborough <corenominal@corenominal.org>  Tue, 06 Sep 2016 18:04:37 +0100
 
 rocket-menu (20160807) xenial; urgency=low
 
   * Improve connections editor (thanks, Mourad Hamoud!)
   * Add missing dependencies.
 
- -- Philip Newborough <corenominal@corenominal.org>  Sun, 7 Aug 2016 16:45:55 +0100
+ -- Philip Newborough <corenominal@corenominal.org>  Sun, 07 Aug 2016 16:45:55 +0100
 
 rocket-menu (20160704) xenial; urgency=low
 
   * Add python-gi to dependencies.
   * Add unity to dependencies.
 
- -- Philip Newborough <corenominal@corenominal.org>  Mon, 4 Jul 2016 21:28:46 +0100
+ -- Philip Newborough <corenominal@corenominal.org>  Mon, 04 Jul 2016 21:28:46 +0100
 
 rocket-menu (20160630) xenial; urgency=low
 
